Fix de crashes, de correcta renderización y funcionalidades añadidas. + ContainerDeleteBuilding.jsx: Operador condicional lógico OR añadido al useEffect para que el sitio no se rompa en caso que no hayan elementos en la BD de la categoría correspondiente; + fetches.js: Corregidas rutas en ambiente prod ; + cards > utils.js: Creado stringifyRoom() para imprimir correctamente las características del inmueble. Corregida la impresión de superficies para casos en que el valor es null o 0 ; + slider.scss: añadida MQ p/ tablet ; + CredentialsInput.jsx: Añadido botón para mostrar/ocultar la contraseña con el nuevo componente PwdVisibilityBtn.jsx ;

--- a/src/pages/main/components/filters/rooms/slider.scss
+++ b/src/pages/main/components/filters/rooms/slider.scss
@@ -37,6 +37,12 @@
     width: 100%;
   }
 }
+/*Tablet*/
+@media only screen and (min-width: 769px) and (max-width: 991px){
+  .nav-item{
+    width: 75%;
+  }
+}
 
 /*Notebooks and Desktops*/
 @media only screen and (min-width: 992px) {
